--- a/test/NetDotEnv.Test/.env
+++ b/test/NetDotEnv.Test/.env
@@ -4,6 +4,6 @@ FOO="foo\${foo}"
 FOO2=test
 BAR="foo\\${FOO2} ${FOO2}"
 xyz=3
-zzz=12%xyz%
-envVar2=%envVar1%
-ccc="12\%xyz%"
+zzz=33$xyz
+envVar2=${envVar1}
+ccc="12${zzz}"
