--- a/src/NetDotEnv/NetDotEnv.csproj
+++ b/src/NetDotEnv/NetDotEnv.csproj
@@ -35,4 +35,9 @@
     <RepositoryUrl>https://github.com/codeyu/net-dotenv</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net46'">
+    <PackageReference Include="System.ValueTuple">
+      <Version>4.5.0</Version>
+    </PackageReference>
+  </ItemGroup>
 </Project>
