--- a/src/NetDotEnv/NetDotEnv.csproj
+++ b/src/NetDotEnv/NetDotEnv.csproj
@@ -3,7 +3,7 @@
     <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
-    <TargetFrameworks>$(TargetFrameworks);net47</TargetFrameworks>
+    <TargetFrameworks>$(TargetFrameworks)</TargetFrameworks>
   </PropertyGroup>
   <PropertyGroup>
     <Version>1.0.0</Version>
